# autoresearch-at-home

./: README-MPS.md  README.md  collab.md  coordinator.py  prepare.py  program.md  pyproject.toml  train.py
