[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kernels>=0.12.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "rustbpe>=0.1.0",
    "tiktoken>=0.12.0",
    "torch==2.10.0",
    "fa4>=0.1.0",
    "einops>=0.8.1",
    "torchao>=0.10",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
